# supple

./: .clang-format  .clang-tidy  .clang-tidy-new  .gitignore  .gitlab-ci.yml  .make.json  CMakeLists.txt  Doxyfile  LICENSE  README.md  cmake-all.sh  ideas.md  makefile  supple-config.cmake  supplementaries-config.cmake  todo.md
cpp/: .clang-format  .clang-tidy  CMakeLists.txt  mock_test.cpp  run_clang-tidy.sh
cpp/inc/core/supl/: algorithm.hpp  all.h  core.h  crtp.hpp  fake_ranges.hpp  functional.hpp  invoke.hpp  iterators.hpp  metaprogramming.hpp  predicates.hpp  term_colors.h  tuple_algo.hpp  type_list.hpp  utility.hpp
cpp/inc/supl/: algorithm.hpp  all.h  comparison.hpp  crtp.hpp  etc.hpp  fake_ranges.hpp  functional.hpp  iterators.hpp  metaprogramming.hpp  term_colors.h  tuple_algo.hpp  type_list.hpp  utility.hpp
cpp/inc/testing/: section.hpp  test.hpp  test_results.hpp  test_runner.hpp  test_section.hpp
cpp/inc/testing/supl/: exception_safety.hpp  test_results.hpp  test_runner.hpp  test_section.hpp  testing.h
cpp/inc/utils/: algorithm.hpp  all.h  etc.hpp  fake_ranges.hpp  iterators.hpp  metaprogramming.hpp  tuple_algo.hpp  type_list.hpp
cpp/include/supple/core/supl/: algorithm.hpp  core.h  crtp.hpp  fake_ranges.hpp  functional.hpp  integer_sequence.hpp  iterators.hpp  metaprogramming.hpp  predicates.hpp  term_colors.h  tuple_algo.hpp  type_list.hpp  type_set.hpp  utility.hpp
cpp/include/supple/named_parameters/supl/: named_params.hpp
cpp/include/supple/named_params/supl/: named_params.hpp
cpp/include/supple/testing/supl/: exception_safety.hpp  test_results.hpp  test_runner.hpp  test_section.hpp
cpp/include/supple_core/supl/: algorithm.hpp  core.h  crtp.hpp  invoke.hpp  predicates.hpp  tuple_algo.hpp  type_list.hpp  utility.hpp
cpp/include/supple_testing/supl/: exception_safety.hpp  test_results.hpp
cpp/scripts/: cmake-all.sh  full_clang-tidy.sh  run_clang-tidy.sh
cpp/src/: main.cpp
cpp/tests/src/: CMakeLists.txt
cpp/tests/src/core/: CMakeLists.txt  test_integer_sequence.cpp  test_invoke.cpp  test_iterators.cpp  test_metaprogramming.cpp  test_polymorphic_storage.cpp  test_type_list.cpp  test_utility.cpp
cpp/tests/src/core/algorithm/: CMakeLists.txt  all_of_pack.cpp  any_of_pack.cpp  copy_n.cpp  for_each.cpp  for_each_adjacent.cpp  for_each_adjacent_n.cpp  for_each_all_n.cpp  for_each_both.cpp  for_each_both_n.cpp  for_each_chain.cpp  max_size.cpp  min_max.cpp  min_size.cpp  none_of_pack.cpp  transform.cpp  zip_apply_n.cpp
cpp/tests/src/core/crtp/: CMakeLists.txt  add_to_string.cpp  addition.cpp  arithmetic.cpp  division.cpp  multiplication.cpp  subtraction.cpp
cpp/tests/src/core/fake_ranges/: CMakeLists.txt
cpp/tests/src/core/functional/: CMakeLists.txt  test_op_bind.cpp
cpp/tests/src/core/predicates/: CMakeLists.txt  conjunction.cpp  constexpr_use.cpp  disjunction.cpp  equal_to.cpp  equals_any_of.cpp  false_pred.cpp  greater_eq.cpp  greater_than.cpp  less_eq.cpp  less_than.cpp  multiple_of.cpp  not_equal_to.cpp  pred_apply_operator.cpp  pred_bicond.cpp  pred_not.cpp  pred_op_and.cpp  pred_op_compound.cpp  pred_op_not.cpp  pred_op_or.cpp  pred_or.cpp  true_pred.cpp
cpp/tests/src/core/tuple_algo/: CMakeLists.txt  all_of.cpp  any_of.cpp  chunk.cpp  count_if.cpp  for_each_all.cpp  for_each_both.cpp  for_each_in_subtuple.cpp  for_each_reverse.cpp  make_cref_tuple.cpp  none_of.cpp  resolve_refs.cpp  reverse.cpp  rotate_left.cpp  rotate_right.cpp  runtime_get.cpp  test_for_each.cpp  zip.cpp
cpp/tests/src/must_not_compile/: CMakeLists.txt
cpp/tests/src/must_not_compile/core/: CMakeLists.txt
cpp/tests/src/must_not_compile/named_params/: CMakeLists.txt  foo_params.h  instantiate_type_with_duplicates.cpp  template.cpp
cpp/tests/src/named_params/: CMakeLists.txt  named_params.cpp
cpp/tests/src/testing/: CMakeLists.txt  test_exception_safety.cpp
cpp/tst/inc/: test_utils.hpp
cpp/tst/inc/core/supl/: test_algorithm.h  test_crtp.h  test_fake_ranges.h  test_functional.h  test_iterators.h  test_tuple_algo.h  test_utility.h
cpp/tst/inc/supl/: test_algorithm.h  test_comparison.h  test_etc.h  test_iterators.h  test_metaprogramming.h  test_type_list.h  test_utility.h
cpp/tst/inc/testing/: test_test.h
cpp/tst/inc/utils/: test_fake_ranges.h  test_tuple_algo.h  test_type_list.h
cpp/tst/src/: maintest.cpp
cpp/tst/src/core/: test_algorithm.cpp  test_core_main.cpp  test_invoke.cpp  test_predicates.cpp  test_tuple_algo.cpp  test_type_list.cpp  test_utility.cpp
cpp/tst/src/core/algorithm/: all_of_pack.cpp  any_of_pack.cpp  copy_n.cpp  for_each.cpp  for_each_adjacent.cpp  for_each_adjacent_n.cpp  for_each_all_n.cpp  for_each_both.cpp  for_each_both_n.cpp  for_each_chain.cpp  max_size.cpp  min_size.cpp  none_of_pack.cpp  transform.cpp
cpp/tst/src/core/crtp/: add_to_string.cpp  addition.cpp  arithmetic.cpp  division.cpp  multiplication.cpp  subtraction.cpp
cpp/tst/src/core/predicates/: conjunction.cpp  constexpr_use.cpp  disjunction.cpp  equal_to.cpp  equals_any_of.cpp  false_pred.cpp  greater_eq.cpp  greater_than.cpp  less_eq.cpp  less_than.cpp  multiple_of.cpp  not_equal_to.cpp  pred_apply_operator.cpp  pred_bicond.cpp  pred_not.cpp  pred_op_and.cpp  pred_op_compound.cpp  pred_op_not.cpp  pred_op_or.cpp  pred_or.cpp  true_pred.cpp
cpp/tst/src/core/supl/: test_algorithm.cpp  test_crtp.cpp  test_fake_ranges.cpp  test_functional.cpp  test_invoke.cpp  test_iterators.cpp  test_metaprogramming.cpp  test_predicates.cpp  test_tuple_algo.cpp  test_type_list.cpp  test_utility.cpp
cpp/tst/src/core/tuple_algo/: all_of.cpp  any_of.cpp  chunk.cpp  count_if.cpp  (+8 more)
cpp/tst/src/supl/: maintest.cpp  test_algorithm.cpp  test_comparison.cpp  test_crtp.cpp  test_etc.cpp  test_fake_ranges.cpp  test_functional.cpp  test_iterators.cpp  test_metaprogramming.cpp  test_tuple_algo.cpp  test_type_list.cpp  test_utility.cpp
cpp/tst/src/testing/: mock_test.cpp  test_exception_safety.cpp  test_test.cpp
cpp/tst/src/utils/: maintest.cpp  test_algorithm.cpp  test_etc.cpp  test_fake_ranges.cpp  test_metaprogramming.cpp  test_tuple_algo.cpp  test_type_list.cpp
(+291 files in other folders)
