supple_add_test(${CMAKE_CURRENT_SOURCE_DIR}/all_of_pack.cpp)
supple_add_test(${CMAKE_CURRENT_SOURCE_DIR}/any_of_pack.cpp)
supple_add_test(${CMAKE_CURRENT_SOURCE_DIR}/copy_n.cpp)
supple_add_test(${CMAKE_CURRENT_SOURCE_DIR}/for_each_adjacent.cpp)
supple_add_test(${CMAKE_CURRENT_SOURCE_DIR}/for_each_adjacent_n.cpp)
supple_add_test(${CMAKE_CURRENT_SOURCE_DIR}/for_each_all_n.cpp)
supple_add_test(${CMAKE_CURRENT_SOURCE_DIR}/for_each_both.cpp)
supple_add_test(${CMAKE_CURRENT_SOURCE_DIR}/for_each_both_n.cpp)
supple_add_test(${CMAKE_CURRENT_SOURCE_DIR}/for_each_chain.cpp)
supple_add_test(${CMAKE_CURRENT_SOURCE_DIR}/for_each.cpp)
supple_add_test(${CMAKE_CURRENT_SOURCE_DIR}/max_size.cpp)
supple_add_test(${CMAKE_CURRENT_SOURCE_DIR}/min_size.cpp)
supple_add_test(${CMAKE_CURRENT_SOURCE_DIR}/none_of_pack.cpp)
supple_add_test(${CMAKE_CURRENT_SOURCE_DIR}/transform.cpp)

add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/contains)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/copy)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/for_each_all)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/generate)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/transform_if)
