supple_add_test(${CMAKE_CURRENT_SOURCE_DIR}/conjunction.cpp)
supple_add_test(${CMAKE_CURRENT_SOURCE_DIR}/constexpr_use.cpp)
supple_add_test(${CMAKE_CURRENT_SOURCE_DIR}/disjunction.cpp)
supple_add_test(${CMAKE_CURRENT_SOURCE_DIR}/equals_any_of.cpp)
supple_add_test(${CMAKE_CURRENT_SOURCE_DIR}/equal_to.cpp)
supple_add_test(${CMAKE_CURRENT_SOURCE_DIR}/false_pred.cpp)
supple_add_test(${CMAKE_CURRENT_SOURCE_DIR}/greater_eq.cpp)
supple_add_test(${CMAKE_CURRENT_SOURCE_DIR}/greater_than.cpp)
supple_add_test(${CMAKE_CURRENT_SOURCE_DIR}/less_eq.cpp)
supple_add_test(${CMAKE_CURRENT_SOURCE_DIR}/less_than.cpp)
supple_add_test(${CMAKE_CURRENT_SOURCE_DIR}/multiple_of.cpp)
supple_add_test(${CMAKE_CURRENT_SOURCE_DIR}/not_equal_to.cpp)
supple_add_test(${CMAKE_CURRENT_SOURCE_DIR}/pred_apply_operator.cpp)
supple_add_test(${CMAKE_CURRENT_SOURCE_DIR}/pred_bicond.cpp)
supple_add_test(${CMAKE_CURRENT_SOURCE_DIR}/pred_not.cpp)
supple_add_test(${CMAKE_CURRENT_SOURCE_DIR}/pred_op_and.cpp)
supple_add_test(${CMAKE_CURRENT_SOURCE_DIR}/pred_op_compound.cpp)
supple_add_test(${CMAKE_CURRENT_SOURCE_DIR}/pred_op_not.cpp)
supple_add_test(${CMAKE_CURRENT_SOURCE_DIR}/pred_op_or.cpp)
supple_add_test(${CMAKE_CURRENT_SOURCE_DIR}/pred_or.cpp)
supple_add_test(${CMAKE_CURRENT_SOURCE_DIR}/true_pred.cpp)

add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/between)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/pred_and)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/pred_implies)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/pred_op_xor)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/pred_xor)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/type_pred)
